made some housekeeping, and started to work and the front side of the app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include _layouts/header.ejs %>
+	<div class="main__title">
+		Near By Shops
+	</div>
+<%- include _layouts/footer.ejs %>
+
+	
