added shops placeholders and created a side menu nav to accommodate the nav bar when the phone breaking point hits

--- a/views/_layouts/nav.ejs
+++ b/views/_layouts/nav.ejs
@@ -10,5 +10,6 @@
     <div class="nav nav__right">
         <a href="" class="nav__tab">LogIn</a>
         <a href="" class="nav__tab">SignUp</a>
+        <%- include menu_icon.ejs %>
     </div>
 </nav>
