--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,14 @@
 <%- include _layouts/header.ejs %>
-	<div class="main__title">
-		Near By Shops
+	<div class="filter">
+		<h3 class="filter__header">Near By Shops</h3>
+		<div class="filter__buttons">
+			<span class="filter__label">Filter by:</span>
+			<button class="filter__button filter__button_active">Name</button>
+			<button class="filter__button">Distance</button>
+		</div>
+	</div>
+	<div class="card__container">
+		<%- include _layouts/card.ejs %>
 	</div>
 <%- include _layouts/footer.ejs %>
 
