--- a/views/_layouts/card.ejs
+++ b/views/_layouts/card.ejs
@@ -1,10 +1,10 @@
-<div class="card">
+<div class="card" data-shop="">
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -14,7 +14,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -24,7 +24,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -34,7 +34,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -44,7 +44,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -54,7 +54,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -64,7 +64,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -74,7 +74,7 @@
     <div class="card__buttons">
         <button class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_favorite">
+        <button class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
