--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
 		<h3 class="filter__header">Near By Shops</h3>
 		<div class="filter__buttons">
 			<span class="filter__label">Filter by:</span>
-			<button class="filter__button filter__button_active">Name</button>
-			<button class="filter__button">Distance</button>
+			<a href="#" class="filter__button filter__button_active">Name</a>
+			<a href="#" class="filter__button">Distance</a>
 		</div>
 	</div>
 	<div class="card__container">
