--- a/views/_layouts/card.ejs
+++ b/views/_layouts/card.ejs
@@ -2,9 +2,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -12,9 +12,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -22,9 +22,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -32,9 +32,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -42,9 +42,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -52,9 +52,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -62,9 +62,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
@@ -72,9 +72,9 @@
     <div class="card__title">Shop name</div>
     <img src="./images/shop1.jpg" alt="shop image">
     <div class="card__buttons">
-        <button class="card__button card__button_dislike">
+        <button data-href="" class="card__button card__button_dislike">
             <%- include dislike.ejs %> Dislike</button>
-        <button class="card__button card__button_like">
+        <button data-href="" class="card__button card__button_like">
             <%- include like.ejs %> Like</button>
     </div>
 </div>
