fix the gulp file, complete the front-end

--- a/views/_layouts/menu.ejs
+++ b/views/_layouts/menu.ejs
@@ -7,10 +7,10 @@
             User name
         </header>
         <ul class="side-nav__content">
-            <li><a href="">Home</a></li>
-            <li><a href="">Favorites</a></li>
-            <li><a href="">LogIn</a></li>
-            <li><a href="">SignUp</a></li>
+            <li><a class="fetch" href="./">Home</a></li>
+            <li><a class="fetch" href="./favorit">Favorites</a></li>
+            <li><a class="fetch" href="./login">LogIn</a></li>
+            <li><a class="fetch" href="./signup">SignUp</a></li>
         </ul>
     </nav>
 </aside>
