--- a/views/_layouts/nav.ejs
+++ b/views/_layouts/nav.ejs
@@ -1,15 +1,15 @@
 <nav>
     <div class="nav nav__left">
-        <a href="" class="nav__logo">
+        <a href="./" class="nav__logo fetch">
             <%- include logo.ejs %>
             <span class="nav__title">Shopers</span>
         </a>
-        <a href="" class="nav__tab nav__tab_current">Home</a>
-        <a href="" class="nav__tab">Favorites</a>
+        <a href="./" class="nav__tab fetch nav__tab_current">Home</a>
+        <a href="./favorit" class="nav__tab fetch">Favorites</a>
     </div>
     <div class="nav nav__right">
-        <a href="" class="nav__tab">LogIn</a>
-        <a href="" class="nav__tab">SignUp</a>
+        <a href="./login" class="nav__tab fetch">LogIn</a>
+        <a href="./signup" class="nav__tab fetch">SignUp</a>
         <%- include menu_icon.ejs %>
     </div>
 </nav>
