--- a/src/css/main.css
+++ b/src/css/main.css
@@ -246,7 +246,7 @@ nav{
     transition:var(--transition);
 }
 
-.card__button_dislike:hover{
+.card__button_dislike:hover, .card__button_remove:hover{
     color:var(--error-color);
     transition:var(--transition);
 }
@@ -254,19 +254,99 @@ nav{
 .card__button_is-liked{color:var(--secondary-color);}
 .card__button_is-disliked{color:var(--error-color);}
 
+.login__container{
+    width:100%;
+    height:90vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.form__header{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:var(--titles-size);
+    font-weight:600;
+    color:var(--title-color);
+    text-transform:uppercase;
+    padding-bottom:16px;
+}
+
+.form__card{
+    width:40vw;
+    padding:26px;
+}
+
+.form__container{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+}
+
+.input{
+    padding: 16px;
+    border: solid .5px var(--border-color);
+    border-radius: 3px;
+    font-size: var(--small-size);
+    color: var(--font-color);
+    margin-bottom: 16px;
+}
+
+.form__input{margin-bottom:16px;}
+
+.button{
+    border: none;
+    background: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 3px;
+    font-size: var(--small-size);
+    font-weight: 600;
+}
+
+.form__button{padding: 16px;}
+
+.form__option{
+    padding-top: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.option__text{
+    font-size: var(--small-size);
+    font-weight: 600;
+}
+
+.form__option p {
+    margin-right: 5px;
+    color: var(--dark-color);
+}
+
+.form__option a {color: var(--secondary-color);}
+
+.card__is-removed{
+    animation: removed-item-animation .3s cubic-bezier(.55,-0.04,.91,.94) forwards;
+}
+
+.hidden{display:none;}
+
 @media screen and (max-width: 1000px){
     .main{padding:0 16px;}
     .card__container{grid-template-columns:repeat(3, 1fr);}
+    .form__card{width:50vw;}
 }
 
 @media screen and (max-width: 740px){
     .card__container{grid-template-columns:repeat(2, 1fr);}
     .svg__menu{display:block;}
     .nav__tab{display:none;}
+    .form__card{width:70vw;}
 }
 
 @media screen and (max-width: 490px){
     .card__container{grid-template-columns:repeat(1, 1fr);}
+    .form__card{width:90vw;}
 }
 
 .side-nav{
@@ -377,4 +457,16 @@ nav{
 .side-nav__content li a:hover{
     color:var(--secondary-color);
     transition:var(--transition);
+}
+
+@keyframes removed-item-animation {
+    from{
+        opacity:1;
+        transform:scale(1);
+    }
+ 
+    to{
+        opacity:0;
+        transform:scale(0);
+    }
 }
