--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
 				<input type="text" name="username" class="input form__input" placeholder="Your Username">
 				<input type="email" name="email" class="input form__input" placeholder="Your Email">
 				<input type="password" name="password" class="input form__input" placeholder="Your Password">
-				<input type="password" name="re-password" class="input form__input" placeholder="Confirm Password">
+				<input type="password" name="repassword" class="input form__input" placeholder="Confirm Password">
 
 				<input type="submit" name="submit" class="button form__button">
 			</form>
