--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shopers - your favorite nearby shop</title>
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
