--- a/views/_layouts/favorit_card.ejs
+++ b/views/_layouts/favorit_card.ejs
@@ -1,32 +1,8 @@
-<div class="card" data-shop="">
-    <div class="card__title">Shop name</div>
-    <img src="./images/shop1.jpg" alt="shop image">
+<div class="card" data-shop="<%= shop._id %>">
+    <div class="card__title"><%= shop.name %></div>
+    <img src="/images/<%= shop.picture %>" alt="<%= shop.name %> image">
     <div class="card__buttons">
-        <button data-href="" class="card__button card__button_remove">
-            <%- include remove.ejs %> Remove</button>
-    </div>
-</div>
-<div class="card" data-shop="">
-    <div class="card__title">Shop name</div>
-    <img src="./images/shop1.jpg" alt="shop image">
-    <div class="card__buttons">
-        <button data-href="" class="card__button card__button_remove">
-            <%- include remove.ejs %> Remove</button>
-    </div>
-</div>
-<div class="card" data-shop="">
-    <div class="card__title">Shop name</div>
-    <img src="./images/shop1.jpg" alt="shop image">
-    <div class="card__buttons">
-        <button data-href="" class="card__button card__button_remove">
-            <%- include remove.ejs %> Remove</button>
-    </div>
-</div>
-<div class="card" data-shop="">
-    <div class="card__title">Shop name</div>
-    <img src="./images/shop1.jpg" alt="shop image">
-    <div class="card__buttons">
-        <button data-href="" class="card__button card__button_remove">
+        <button data-href="/api/favorit" class="card__button card__button_remove">
             <%- include remove.ejs %> Remove</button>
     </div>
 </div>
