--- a/views/_layouts/menu.ejs
+++ b/views/_layouts/menu.ejs
@@ -4,13 +4,16 @@
             <%- include back.ejs%>
         </button>
         <header class="side-nav__header">
-            User name
+            <% if (user && user.username) { %><%= user.username %><% } %>
         </header>
         <ul class="side-nav__content">
             <li><a class="fetch" href="./">Home</a></li>
+            <% if (user && user.username) { %>
             <li><a class="fetch" href="./favorit">Favorites</a></li>
+            <% } else { %>
             <li><a class="fetch" href="./login">LogIn</a></li>
             <li><a class="fetch" href="./signup">SignUp</a></li>
+            <% } %>
         </ul>
     </nav>
 </aside>
