--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 	<div class="login__container">
 		<div class="card form__card">
 			<div class="form__header">Log In</div>
-			<form class="form__container" action="" method="post">
+			<form class="form__container" action="/api/login" method="post">
 				<input type="email" name="email" class="input form__input" placeholder="Your Email">
 				<input type="password" name="password" class="input form__input" placeholder="Your Password">
 
