--- a/views/_layouts/filter.ejs
+++ b/views/_layouts/filter.ejs
@@ -1,6 +1,6 @@
 <div class="filter__buttons">
     <span class="filter__label">Filter by:</span>
-    <a href="<% if (page != 'index') {%>/<%= page%><% } %>/name" class="filter__button <% if (filter === 'name') { %>filter__button_active<% } %>">Name</a>
-    <a href="<% if (page != 'index') {%>/<%= page%><% } %>/distance" class="filter__button <% if (filter === 'distance') { %>filter__button_active
+    <a href="<% if (page != 'index') {%>/<%= page%><% } %>/name" class="fetch filter__button <% if (filter === 'name') { %>filter__button_active<% } %>">Name</a>
+    <a href="<% if (page != 'index') {%>/<%= page%><% } %>/distance" class="fetch filter__button <% if (filter === 'distance') { %>filter__button_active
 				<% } %>">Distance</a>
 </div>
