--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -1,5 +1,7 @@
     </main>
     <%- include menu.ejs %>
+    <div class="tmp hidden"></div>
+    <img class="loader hidden" src="/svg-loaders/tail-spin.svg" width="50" alt="">
 </body>
 
 <script defer async src="/js/main.min.js"></script>
