--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,7 +40,7 @@ html, body{
     font-family:var(--font);
     outline:none;
     background:var(--background-color);
-    min-width:430px;
+    min-width:380px;
 }
 
 body{
@@ -79,9 +79,10 @@ nav{
     font-weight: 600;
     font-size: var(--small-size);
     text-transform: uppercase;
+    padding-left:16px;
     padding-right: 32px;
     display: block;
-    color: var(--secondary-color);
+    color: var(--dark-color);
 }
 
 .svg__logo{
@@ -162,7 +163,7 @@ nav{
 .filter__label{
     font-size:.7em;
     font-weight:600;
-    color:var(--filter-color);
+    color:var(--dark-color);
     text-transform:uppercase;
     margin-right:16px;
 }
@@ -236,7 +237,7 @@ nav{
     align-items: center;
     font-size: var(--small-size);
     font-weight: 600;
-    color: var(--font-color);
+    color: var(--dark-color);
     border-right: solid .5px var(--border-color);
     padding: 14.5px 0;
     cursor: pointer;
@@ -342,6 +343,19 @@ nav{
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
+}
+
+.event{
+    pointer-events:none;
+}
+
+.message{
+    width: auto;
+    font-weight: 600;
+    padding: 8px 16px;
+    border-radius: 3px;
+    color: var(--error-color);
+    background: rgb(241, 76, 93, 0.2);
 }
 
 .hidden{display:none;}
