implemented the flash express messaging promter

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -14,4 +14,4 @@
 <body>
     <%- include nav.ejs %>
     <main class="main">
-        <!-- <% if (messages.info) { %><div class="message"><%= messages.info %></div><%}%> -->
+        <% if (messages.error) { %><div class="message"><%= messages.error %></div><%}%>
