starting the deployment to heroku

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title><%= title %></title>
+    <meta name="description" content="browse near by shops by distance, and leave leave a like to the shops that you favor" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#3392ff" />
 
