--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -8,9 +8,7 @@
 
     <link rel="manifest" href="/manifest.json">
 
-    <style>
-        <%- include('../public/css/main.min.css') %>
-    </style>
+    <style><%- include('../public/css/main.min.css') %></style>
 </head>
 <body>
     <%- include nav.ejs %>
