--- a/views/favorit.ejs
+++ b/views/favorit.ejs
@@ -1,6 +1,6 @@
 <%- include _layouts/header.ejs %>
 	<div class="filter">
-		<h3 class="filter__header">Near By Shops</h3>
+		<h3 class="filter__header">My Preferred Shops</h3>
 		<%- include _layouts/filter.ejs %>
 	</div>
 	<div class="card__container">
