--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -4,5 +4,6 @@
     <img class="loader hidden" src="/svg-loaders/tail-spin.svg" width="50" alt="">
 </body>
 
+<script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
 <script defer async src="/js/main.min.js"></script>
 </html>
